# bible-reader

./: .gitignore  CLAUDE.md  DATA_COLLECTION.md  DEPENDENCIES.md  IMPLEMENTATION_PLAN.md  UV_SETUP.md  bible-reader-prd.md  index.html  netlify.toml  package-lock.json  package.json  pyproject.toml  vercel.json  vite.config.js
.claude/: settings.local.json
docs/: DEPLOYMENT.md  README.md
docs/architecture/: components.md  data-schemas.md  overview.md
docs/data-sources/: bible-text.md  commentary-sources.md  cross-references.md
docs/development/: data-pipeline.md  setup-guide.md  testing-strategy.md
public/: sw.js
public/data/: bible_asv.json  commentaries.json  cross_references.json  similarity_matrix.json
scripts/: build_cross_references.js  build_similarity_matrix.js  download_asv_working.js  download_bible_data.js  download_revelation_commentary.js  download_revelation_missing.js  generate_embeddings.py  process_bible.js  process_commentary.js  requirements.txt
src/: App.jsx  index.css
src/components/: BibleReader.jsx  Commentary.jsx  Navigation.jsx  RelatedPassages.jsx
src/utils/: dataLoader.js  ragSystem.js  textSelection.js
