[project]
name = "bible-reader-data-processing"
version = "0.1.0"
description = "Data processing scripts for Bible Reader application"
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=2.2.2",
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]